--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,40 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {},
+    "autoload": {
+        "psr-4": {
+            "Lencse\\Rectum\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\": "test/"
+        }
+    },
+    "require": {
+        "php": ">=7.2.0",
+        "rdlowrey/auryn": "^1.4"
+    },
     "require-dev": {
-        "phpunit/phpunit": "^7.2"
+        "phpunit/phpunit": "^7.2",
+        "lencse/ci-tools": "^3.1",
+        "phpmd/phpmd": "^2.6",
+        "squizlabs/php_codesniffer": "^3.3",
+        "vimeo/psalm": "^2.0",
+        "phpstan/phpstan": "^0.10.1",
+        "phploc/phploc": "^4.0"
+    },
+    "scripts": {
+        "test": "phpunit",
+        "test-coverage": "phpunit --coverage-html logs/coverage-report --coverage-clover logs/clover.xml",
+        "min-coverage": "ci-test-coverage --min-coverage 99 --clover-file logs/clover.xml",
+        "md": "phpmd src/ text phpmd.xml && phpmd test/ text phpmd.xml",
+        "cs": "phpcs --standard=PSR2 src test",
+        "loc": "phploc --count-tests -vvv src test",
+        "psalm": "psalm",
+        "phpstan": "phpstan analyse --level 7 src test",
+        "test-all": "composer test-coverage && composer min-coverage && composer md && composer cs && composer psalm && composer phpstan && composer loc",
+        "benchmark": "phpbench run  --revs=100 --iterations=5 --report=default",
+        "benchmark-trace": "phpbench xdebug:trace --extension=\"PhpBench\\Extensions\\XDebug\\XDebugExtension\""
     }
 }
