--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "php": ">=7.2.0",
         "rdlowrey/auryn": "^1.4",
         "guzzlehttp/psr7": "^1.4",
-        "nikic/fast-route": "^1.3"
+        "nikic/fast-route": "^1.3",
+        "psr/container": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.2",
