--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "rdlowrey/auryn": "^1.4",
         "guzzlehttp/psr7": "^1.4",
         "nikic/fast-route": "^1.3",
-        "psr/container": "^1.0"
+        "psr/container": "^1.0",
+        "psr/http-server-handler": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.2",
