--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Test\\": "test/"
+            "Test\\": "test/",
+            "TestApp\\": "test/Integration/test-app/src/"
         }
     },
     "require": {
