--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,6 @@
         "lencse/ci-tools": "^3.1",
         "phpmd/phpmd": "^2.6",
         "squizlabs/php_codesniffer": "^3.3",
-        "vimeo/psalm": "^2.0",
         "phpstan/phpstan": "^0.10.1",
         "phploc/phploc": "^4.0"
     },
@@ -46,9 +45,8 @@
         "md": "phpmd src/ text phpmd.xml && phpmd test/ text phpmd.xml",
         "cs": "phpcs --standard=PSR2 src test",
         "loc": "phploc -vvv src",
-        "psalm": "psalm",
         "phpstan": "phpstan analyse -c phpstan.neon --level 7 src test",
-        "test-all": "composer test-coverage && composer min-coverage && composer md && composer cs && composer psalm && composer phpstan && composer loc",
+        "test-all": "composer test-coverage && composer min-coverage && composer md && composer cs && composer phpstan && composer loc",
         "benchmark": "phpbench run  --revs=100 --iterations=5 --report=default",
         "benchmark-trace": "phpbench xdebug:trace --extension=\"PhpBench\\Extensions\\XDebug\\XDebugExtension\""
     }
