--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,12 @@ jobs:
                 name: Set up Sonarcloud client
                 command:
                     bash .circleci/setup-sonarcloud.sh
+            - run: cat /home/circleci/.bashrc
             - run: source /home/circleci/.bashrc
             - run:
                 name: Check Sonarcloud setup
                 command:
-                    sonar-scanner --version
+                    source /home/circleci/.bashrc && sonar-scanner --version
 #     benchmark:
 #         <<: *CONFIG
 #         steps:
