--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,10 +33,11 @@ jobs:
             - run: cat /home/circleci/.bashrc
             - run: source /home/circleci/.bashrc
             - run: ls -la /home/circleci/repo/sonar-scanner-3.2.0.1227-linux/bin/sonar-scanner
+            - run: source /home/circleci/.bashrc && echo $PATH
             - run:
                 name: Check Sonarcloud setup
                 command:
-                    source /home/circleci/.bashrc && sonar-scanner --version
+                    source /home/circleci/.bashrc && echo $PATH && sonar-scanner --version
 #     benchmark:
 #         <<: *CONFIG
 #         steps:
